native/include/c_api/rp3d_c_api.h

// ==================== Opaque Type Declarations ====================
// These represent C++ objects but are exposed as opaque pointers to C/FFI

typedef struct RP3D_PhysicsCommon RP3D_PhysicsCommon;
typedef struct RP3D_PhysicsWorld RP3D_PhysicsWorld;
typedef struct RP3D_RigidBody RP3D_RigidBody;
typedef struct RP3D_Collider RP3D_Collider;
typedef struct RP3D_CollisionShape RP3D_CollisionShape;
typedef struct RP3D_BoxShape RP3D_BoxShape;
typedef struct RP3D_SphereShape RP3D_SphereShape;
typedef struct RP3D_CapsuleShape RP3D_CapsuleShape;
typedef struct RP3D_ConvexMeshShape RP3D_ConvexMeshShape;
typedef struct RP3D_ConcaveMeshShape RP3D_ConcaveMeshShape;
typedef struct RP3D_HeightFieldShape RP3D_HeightFieldShape;
typedef struct RP3D_TriangleMesh RP3D_TriangleMesh;
typedef struct RP3D_TriangleVertexArray RP3D_TriangleVertexArray;
typedef struct RP3D_PolygonVertexArray RP3D_PolygonVertexArray;
typedef struct RP3D_ConvexMesh RP3D_ConvexMesh;
typedef struct RP3D_HeightField RP3D_HeightField;
typedef struct RP3D_Material RP3D_Material;
typedef struct RP3D_BallAndSocketJoint RP3D_BallAndSocketJoint;
typedef struct RP3D_HingeJoint RP3D_HingeJoint;
typedef struct RP3D_SliderJoint RP3D_SliderJoint;
typedef struct RP3D_FixedJoint RP3D_FixedJoint;
// ==================== Enums ====================

typedef enum {
    RP3D_BODY_TYPE_STATIC = 1,
    RP3D_BODY_TYPE_KINEMATIC = 2,
    RP3D_BODY_TYPE_DYNAMIC = 3
} RP3D_BodyType;
// ==================== Value Types (POD Structs) ====================

typedef struct {
    float x;
    float y;
    float z;
} RP3D_Vector3;
typedef struct {
    float x;
    float y;
    float z;
    float w;
} RP3D_Quaternion;
typedef struct {
    RP3D_Vector3 position;
    RP3D_Quaternion orientation;
} RP3D_Transform;
typedef struct {
    RP3D_Vector3 min;
    RP3D_Vector3 max;
} RP3D_AABB;
typedef struct {
    RP3D_Vector3 point1;
    RP3D_Vector3 point2;
    float maxFraction;
} RP3D_Ray;
typedef struct {
    RP3D_RigidBody* body;
    RP3D_Collider* collider;
    RP3D_Vector3 worldPoint;
    RP3D_Vector3 worldNormal;
    float hitFraction;
} RP3D_RaycastInfo;
// Joint info structures
typedef struct {
    RP3D_Vector3 anchorPointWorldSpace;
    RP3D_RigidBody* body1;
    RP3D_RigidBody* body2;
    uint8_t isCollisionEnabled;
} RP3D_BallAndSocketJointInfo;
typedef struct {
    RP3D_Vector3 anchorPointWorldSpace;
    RP3D_Vector3 rotationAxisWorld;
    RP3D_RigidBody* body1;
    RP3D_RigidBody* body2;
    uint8_t isCollisionEnabled;
    uint8_t isLimitEnabled;
    uint8_t isMotorEnabled;
    float minAngleLimit;
    float maxAngleLimit;
    float motorSpeed;
    float maxMotorTorque;
} RP3D_HingeJointInfo;
typedef struct {
    RP3D_Vector3 anchorPointWorldSpace;
    RP3D_Vector3 sliderAxisWorldSpace;
    RP3D_RigidBody* body1;
    RP3D_RigidBody* body2;
    uint8_t isCollisionEnabled;
    uint8_t isLimitEnabled;
    uint8_t isMotorEnabled;
    float minTranslationLimit;
    float maxTranslationLimit;
    float motorSpeed;
    float maxMotorForce;
} RP3D_SliderJointInfo;
typedef struct {
    RP3D_Vector3 anchorPointWorldSpace;
    RP3D_RigidBody* body1;
    RP3D_RigidBody* body2;
    uint8_t isCollisionEnabled;
} RP3D_FixedJointInfo;
EMSCRIPTEN_KEEPALIVE uint8_t rp3d_body_is_gravity_enabled(const RP3D_RigidBody* body);
// Mass properties
EMSCRIPTEN_KEEPALIVE void rp3d_body_update_mass_properties_from_colliders(RP3D_RigidBody* body);
// Collider management
EMSCRIPTEN_KEEPALIVE RP3D_Collider* rp3d_body_add_collider(RP3D_RigidBody* body, RP3D_CollisionShape* shape, const RP3D_Transform* transform);
EMSCRIPTEN_KEEPALIVE void rp3d_body_remove_collider(RP3D_RigidBody* body, RP3D_Collider* collider);
EMSCRIPTEN_KEEPALIVE void rp3d_collider_set_material(RP3D_Collider* collider, const RP3D_Material* material);
// ==================== Collider ====================

EMSCRIPTEN_KEEPALIVE RP3D_Material* rp3d_collider_get_material(RP3D_Collider* collider);
EMSCRIPTEN_KEEPALIVE void rp3d_collider_get_local_bounds(const RP3D_Collider* collider, RP3D_AABB* outAABB);
EMSCRIPTEN_KEEPALIVE void rp3d_collider_set_is_trigger(RP3D_Collider* collider, uint8_t isTrigger);
EMSCRIPTEN_KEEPALIVE uint8_t rp3d_collider_get_is_trigger(const RP3D_Collider* collider);
// ==================== Material ====================
EMSCRIPTEN_KEEPALIVE void rp3d_material_destroy(RP3D_Material* material);
EMSCRIPTEN_KEEPALIVE void rp3d_material_set_bounciness(RP3D_Material* material, float bounciness);
EMSCRIPTEN_KEEPALIVE float rp3d_material_get_bounciness(const RP3D_Material* material);
EMSCRIPTEN_KEEPALIVE void rp3d_material_set_friction_coefficient(RP3D_Material* material, float frictionCoefficient);
EMSCRIPTEN_KEEPALIVE float rp3d_material_get_friction_coefficient(const RP3D_Material* material);
EMSCRIPTEN_KEEPALIVE void rp3d_material_set_mass_density(RP3D_Material* material, float massDensity);
EMSCRIPTEN_KEEPALIVE float rp3d_material_get_mass_density(const RP3D_Material* material);
// ==================== CollisionShape (base) ====================

EMSCRIPTEN_KEEPALIVE void rp3d_shape_get_local_bounds(const RP3D_CollisionShape* shape, RP3D_AABB* outAABB);
EMSCRIPTEN_KEEPALIVE void rp3d_concave_shape_set_scale(RP3D_HeightFieldShape *shape, const RP3D_Vector3* scale);
// ==================== HeightFieldShape ====================

EMSCRIPTEN_KEEPALIVE void rp3d_height_field_shape_get_vertex_at(
    const RP3D_HeightFieldShape* heightFieldShape,
    uint32_t row,
    uint32_t column,
    RP3D_Vector3* outVertex
);
// ==================== Math Utilities ====================

// Vector3
EMSCRIPTEN_KEEPALIVE void rp3d_vector3_zero(RP3D_Vector3* v);
EMSCRIPTEN_KEEPALIVE float rp3d_vector3_length(const RP3D_Vector3* v);
EMSCRIPTEN_KEEPALIVE void rp3d_vector3_normalize(RP3D_Vector3* v);
EMSCRIPTEN_KEEPALIVE float rp3d_vector3_dot(const RP3D_Vector3* v1, const RP3D_Vector3* v2);
EMSCRIPTEN_KEEPALIVE void rp3d_vector3_cross(const RP3D_Vector3* v1, const RP3D_Vector3* v2, RP3D_Vector3* outResult);
// Quaternion
EMSCRIPTEN_KEEPALIVE void rp3d_quaternion_identity(RP3D_Quaternion* q);
EMSCRIPTEN_KEEPALIVE void rp3d_quaternion_from_axis_angle(const RP3D_Vector3* axis, float angle, RP3D_Quaternion* outQuat);
EMSCRIPTEN_KEEPALIVE void rp3d_quaternion_normalize(RP3D_Quaternion* q);
// Transform
EMSCRIPTEN_KEEPALIVE void rp3d_transform_identity(RP3D_Transform* t);
EMSCRIPTEN_KEEPALIVE void rp3d_transform_inverse(const RP3D_Transform* t, RP3D_Transform* outInverse);
// ==================== Joints ====================

EMSCRIPTEN_KEEPALIVE RP3D_BallAndSocketJoint* rp3d_world_create_ball_and_socket_joint(
    RP3D_PhysicsWorld* world,
    const RP3D_BallAndSocketJointInfo* jointInfo
);
EMSCRIPTEN_KEEPALIVE RP3D_HingeJoint* rp3d_world_create_hinge_joint(
    RP3D_PhysicsWorld* world,
    const RP3D_HingeJointInfo* jointInfo
);
EMSCRIPTEN_KEEPALIVE RP3D_SliderJoint* rp3d_world_create_slider_joint(
    RP3D_PhysicsWorld* world,
    const RP3D_SliderJointInfo* jointInfo
);
EMSCRIPTEN_KEEPALIVE RP3D_FixedJoint* rp3d_world_create_fixed_joint(
    RP3D_PhysicsWorld* world,
    const RP3D_FixedJointInfo* jointInfo
);
EMSCRIPTEN_KEEPALIVE void rp3d_world_destroy_joint(RP3D_PhysicsWorld* world, void* joint);