lib/src/bindings/src/rp3d_ffi.g.dart


@ffi.Native<ffi.Uint8 Function(ffi.Pointer<RP3D_RigidBody>)>(isLeaf: true)
external int rp3d_body_is_gravity_enabled(
  ffi.Pointer<RP3D_RigidBody> body,
);

/// Mass properties
@ffi.Native<ffi.Void Function(ffi.Pointer<RP3D_RigidBody>)>(isLeaf: true)
external void rp3d_body_update_mass_properties_from_colliders(
  ffi.Pointer<RP3D_RigidBody> body,
);

/// Collider management
@ffi.Native<
    ffi.Pointer<RP3D_Collider> Function(
        ffi.Pointer<RP3D_RigidBody>,
        ffi.Pointer<RP3D_CollisionShape>,
        ffi.Pointer<RP3D_Transform>)>(isLeaf: true)
external ffi.Pointer<RP3D_Collider> rp3d_body_add_collider(
  ffi.Pointer<RP3D_RigidBody> body,
  ffi.Pointer<RP3D_CollisionShape> shape,
  ffi.Pointer<RP3D_Transform> transform,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<RP3D_RigidBody>, ffi.Pointer<RP3D_Collider>)>(isLeaf: true)
external void rp3d_body_remove_collider(
  ffi.Pointer<RP3D_RigidBody> body,
  ffi.Pointer<RP3D_Collider> collider,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<RP3D_Collider>, ffi.Pointer<RP3D_Material>)>(isLeaf: true)
external void rp3d_collider_set_material(
  ffi.Pointer<RP3D_Collider> collider,
  ffi.Pointer<RP3D_Material> material,
);

/// ==================== Collider ====================
@ffi.Native<ffi.Pointer<RP3D_Material> Function(ffi.Pointer<RP3D_Collider>)>(
    isLeaf: true)
external ffi.Pointer<RP3D_Material> rp3d_collider_get_material(
  ffi.Pointer<RP3D_Collider> collider,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<RP3D_Collider>, ffi.Pointer<RP3D_AABB>)>(isLeaf: true)
external void rp3d_collider_get_local_bounds(
  ffi.Pointer<RP3D_Collider> collider,
  ffi.Pointer<RP3D_AABB> outAABB,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<RP3D_Collider>, ffi.Uint8)>(
    isLeaf: true)
external void rp3d_collider_set_is_trigger(
  ffi.Pointer<RP3D_Collider> collider,
  int isTrigger,
);

@ffi.Native<ffi.Uint8 Function(ffi.Pointer<RP3D_Collider>)>(isLeaf: true)
external int rp3d_collider_get_is_trigger(
  ffi.Pointer<RP3D_Collider> collider,
);

/// ==================== Material ====================
@ffi.Native<ffi.Void Function(ffi.Pointer<RP3D_Material>)>(isLeaf: true)
external void rp3d_material_destroy(
  ffi.Pointer<RP3D_Material> material,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<RP3D_Material>, ffi.Float)>(
    isLeaf: true)
external void rp3d_material_set_bounciness(
  ffi.Pointer<RP3D_Material> material,
  double bounciness,
);

@ffi.Native<ffi.Float Function(ffi.Pointer<RP3D_Material>)>(isLeaf: true)
external double rp3d_material_get_bounciness(
  ffi.Pointer<RP3D_Material> material,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<RP3D_Material>, ffi.Float)>(
    isLeaf: true)
external void rp3d_material_set_friction_coefficient(
  ffi.Pointer<RP3D_Material> material,
  double frictionCoefficient,
);

@ffi.Native<ffi.Float Function(ffi.Pointer<RP3D_Material>)>(isLeaf: true)
external double rp3d_material_get_friction_coefficient(
  ffi.Pointer<RP3D_Material> material,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<RP3D_Material>, ffi.Float)>(
    isLeaf: true)
external void rp3d_material_set_mass_density(
  ffi.Pointer<RP3D_Material> material,
  double massDensity,
);

@ffi.Native<ffi.Float Function(ffi.Pointer<RP3D_Material>)>(isLeaf: true)
external double rp3d_material_get_mass_density(
  ffi.Pointer<RP3D_Material> material,
);

/// ==================== CollisionShape (base) ====================
@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<RP3D_CollisionShape>, ffi.Pointer<RP3D_AABB>)>(isLeaf: true)
external void rp3d_shape_get_local_bounds(
  ffi.Pointer<RP3D_CollisionShape> shape,
  ffi.Pointer<RP3D_AABB> outAABB,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<RP3D_HeightFieldShape>,
        ffi.Pointer<RP3D_Vector3>)>(isLeaf: true)
external void rp3d_concave_shape_set_scale(
  ffi.Pointer<RP3D_HeightFieldShape> shape,
  ffi.Pointer<RP3D_Vector3> scale,
);

/// ==================== HeightFieldShape ====================
@ffi.Native<
    ffi.Void Function(ffi.Pointer<RP3D_HeightFieldShape>, ffi.Uint32,
        ffi.Uint32, ffi.Pointer<RP3D_Vector3>)>(isLeaf: true)
external void rp3d_height_field_shape_get_vertex_at(
  ffi.Pointer<RP3D_HeightFieldShape> heightFieldShape,
  int row,
  int column,
  ffi.Pointer<RP3D_Vector3> outVertex,
);

/// Vector3
@ffi.Native<ffi.Void Function(ffi.Pointer<RP3D_Vector3>)>(isLeaf: true)
external void rp3d_vector3_zero(
  ffi.Pointer<RP3D_Vector3> v,
);

@ffi.Native<ffi.Float Function(ffi.Pointer<RP3D_Vector3>)>(isLeaf: true)
external double rp3d_vector3_length(
  ffi.Pointer<RP3D_Vector3> v,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<RP3D_Vector3>)>(isLeaf: true)
external void rp3d_vector3_normalize(
  ffi.Pointer<RP3D_Vector3> v,
);

@ffi.Native<
    ffi.Float Function(
        ffi.Pointer<RP3D_Vector3>, ffi.Pointer<RP3D_Vector3>)>(isLeaf: true)
external double rp3d_vector3_dot(
  ffi.Pointer<RP3D_Vector3> v1,
  ffi.Pointer<RP3D_Vector3> v2,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<RP3D_Vector3>, ffi.Pointer<RP3D_Vector3>,
        ffi.Pointer<RP3D_Vector3>)>(isLeaf: true)
external void rp3d_vector3_cross(
  ffi.Pointer<RP3D_Vector3> v1,
  ffi.Pointer<RP3D_Vector3> v2,
  ffi.Pointer<RP3D_Vector3> outResult,
);

/// Quaternion
@ffi.Native<ffi.Void Function(ffi.Pointer<RP3D_Quaternion>)>(isLeaf: true)
external void rp3d_quaternion_identity(
  ffi.Pointer<RP3D_Quaternion> q,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<RP3D_Vector3>, ffi.Float,
        ffi.Pointer<RP3D_Quaternion>)>(isLeaf: true)
external void rp3d_quaternion_from_axis_angle(
  ffi.Pointer<RP3D_Vector3> axis,
  double angle,
  ffi.Pointer<RP3D_Quaternion> outQuat,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<RP3D_Quaternion>)>(isLeaf: true)
external void rp3d_quaternion_normalize(
  ffi.Pointer<RP3D_Quaternion> q,
);

/// Transform
@ffi.Native<ffi.Void Function(ffi.Pointer<RP3D_Transform>)>(isLeaf: true)
external void rp3d_transform_identity(
  ffi.Pointer<RP3D_Transform> t,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<RP3D_Transform>, ffi.Pointer<RP3D_Transform>)>(isLeaf: true)
external void rp3d_transform_inverse(
  ffi.Pointer<RP3D_Transform> t,
  ffi.Pointer<RP3D_Transform> outInverse,
);

/// ==================== Joints ====================
@ffi.Native<
    ffi.Pointer<RP3D_BallAndSocketJoint> Function(
        ffi.Pointer<RP3D_PhysicsWorld>,
        ffi.Pointer<RP3D_BallAndSocketJointInfo>)>(isLeaf: true)
external ffi.Pointer<RP3D_BallAndSocketJoint>
    rp3d_world_create_ball_and_socket_joint(
  ffi.Pointer<RP3D_PhysicsWorld> world,
  ffi.Pointer<RP3D_BallAndSocketJointInfo> jointInfo,
);

@ffi.Native<
    ffi.Pointer<RP3D_HingeJoint> Function(ffi.Pointer<RP3D_PhysicsWorld>,
        ffi.Pointer<RP3D_HingeJointInfo>)>(isLeaf: true)
external ffi.Pointer<RP3D_HingeJoint> rp3d_world_create_hinge_joint(
  ffi.Pointer<RP3D_PhysicsWorld> world,
  ffi.Pointer<RP3D_HingeJointInfo> jointInfo,
);

@ffi.Native<
    ffi.Pointer<RP3D_SliderJoint> Function(ffi.Pointer<RP3D_PhysicsWorld>,
        ffi.Pointer<RP3D_SliderJointInfo>)>(isLeaf: true)
external ffi.Pointer<RP3D_SliderJoint> rp3d_world_create_slider_joint(
  ffi.Pointer<RP3D_PhysicsWorld> world,
  ffi.Pointer<RP3D_SliderJointInfo> jointInfo,
);

@ffi.Native<
    ffi.Pointer<RP3D_FixedJoint> Function(ffi.Pointer<RP3D_PhysicsWorld>,
        ffi.Pointer<RP3D_FixedJointInfo>)>(isLeaf: true)
external ffi.Pointer<RP3D_FixedJoint> rp3d_world_create_fixed_joint(
  ffi.Pointer<RP3D_PhysicsWorld> world,
  ffi.Pointer<RP3D_FixedJointInfo> jointInfo,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<RP3D_PhysicsWorld>, ffi.Pointer<ffi.Void>)>(isLeaf: true)
external void rp3d_world_destroy_joint(
  ffi.Pointer<RP3D_PhysicsWorld> world,
  ffi.Pointer<ffi.Void> joint,
);

final class RP3D_PhysicsCommon extends ffi.Opaque {}

final class RP3D_PhysicsWorld extends ffi.Opaque {}

final class RP3D_RigidBody extends ffi.Opaque {}

final class RP3D_Collider extends ffi.Opaque {}

final class RP3D_CollisionShape extends ffi.Opaque {}

final class RP3D_BoxShape extends ffi.Opaque {}

final class RP3D_SphereShape extends ffi.Opaque {}

final class RP3D_CapsuleShape extends ffi.Opaque {}

final class RP3D_ConvexMeshShape extends ffi.Opaque {}

final class RP3D_ConcaveMeshShape extends ffi.Opaque {}

final class RP3D_HeightFieldShape extends ffi.Opaque {}

final class RP3D_TriangleMesh extends ffi.Opaque {}

final class RP3D_TriangleVertexArray extends ffi.Opaque {}

final class RP3D_PolygonVertexArray extends ffi.Opaque {}

final class RP3D_ConvexMesh extends ffi.Opaque {}

final class RP3D_HeightField extends ffi.Opaque {}

final class RP3D_Material extends ffi.Opaque {}

final class RP3D_BallAndSocketJoint extends ffi.Opaque {}

final class RP3D_HingeJoint extends ffi.Opaque {}

final class RP3D_SliderJoint extends ffi.Opaque {}

final class RP3D_FixedJoint extends ffi.Opaque {}

/// ==================== Enums ====================
sealed class RP3D_BodyType {
  static const RP3D_BODY_TYPE_STATIC = 1;
  static const RP3D_BODY_TYPE_KINEMATIC = 2;
  static const RP3D_BODY_TYPE_DYNAMIC = 3;
}

/// ==================== Value Types (POD Structs) ====================
final class RP3D_Vector3 extends ffi.Struct {
  @ffi.Float()
  external double x;

  @ffi.Float()
  external double y;

  @ffi.Float()
  external double z;
}

final class RP3D_Quaternion extends ffi.Struct {
  @ffi.Float()
  external double x;

  @ffi.Float()
  external double y;

  @ffi.Float()
  external double z;

  @ffi.Float()
  external double w;
}

final class RP3D_Transform extends ffi.Struct {
  external RP3D_Vector3 position;

  external RP3D_Quaternion orientation;
}

final class RP3D_AABB extends ffi.Struct {
  external RP3D_Vector3 min;

  external RP3D_Vector3 max;
}

final class RP3D_Ray extends ffi.Struct {
  external RP3D_Vector3 point1;

  external RP3D_Vector3 point2;

  @ffi.Float()
  external double maxFraction;
}

final class RP3D_RaycastInfo extends ffi.Struct {
  external ffi.Pointer<RP3D_RigidBody> body;

  external ffi.Pointer<RP3D_Collider> collider;

  external RP3D_Vector3 worldPoint;

  external RP3D_Vector3 worldNormal;

  @ffi.Float()
  external double hitFraction;
}

/// Joint info structures
final class RP3D_BallAndSocketJointInfo extends ffi.Struct {
  external RP3D_Vector3 anchorPointWorldSpace;

  external ffi.Pointer<RP3D_RigidBody> body1;

  external ffi.Pointer<RP3D_RigidBody> body2;

  @ffi.Uint8()
  external int isCollisionEnabled;
}

final class RP3D_HingeJointInfo extends ffi.Struct {
  external RP3D_Vector3 anchorPointWorldSpace;

  external RP3D_Vector3 rotationAxisWorld;

  external ffi.Pointer<RP3D_RigidBody> body1;

  external ffi.Pointer<RP3D_RigidBody> body2;

  @ffi.Uint8()
  external int isCollisionEnabled;

  @ffi.Uint8()
  external int isLimitEnabled;

  @ffi.Uint8()
  external int isMotorEnabled;

  @ffi.Float()
  external double minAngleLimit;

  @ffi.Float()
  external double maxAngleLimit;

  @ffi.Float()
  external double motorSpeed;

  @ffi.Float()
  external double maxMotorTorque;
}

final class RP3D_SliderJointInfo extends ffi.Struct {
  external RP3D_Vector3 anchorPointWorldSpace;

  external RP3D_Vector3 sliderAxisWorldSpace;

  external ffi.Pointer<RP3D_RigidBody> body1;

  external ffi.Pointer<RP3D_RigidBody> body2;

  @ffi.Uint8()
  external int isCollisionEnabled;

  @ffi.Uint8()
  external int isLimitEnabled;

  @ffi.Uint8()
  external int isMotorEnabled;

  @ffi.Float()
  external double minTranslationLimit;

  @ffi.Float()
  external double maxTranslationLimit;

  @ffi.Float()
  external double motorSpeed;

  @ffi.Float()
  external double maxMotorForce;
}

final class RP3D_FixedJointInfo extends ffi.Struct {
  external RP3D_Vector3 anchorPointWorldSpace;

  external ffi.Pointer<RP3D_RigidBody> body1;

  external ffi.Pointer<RP3D_RigidBody> body2;

  @ffi.Uint8()
  external int isCollisionEnabled;
}
